# Primer_Repositorio

./: README.md
1er_Parcial/1.0Constructores_En_Clase/: CMakeLists.txt  Coche.cpp  Coche.h  FloatCell.cpp  FloatCell.h  main.cpp
1er_Parcial/1.1Constructores/: CMakeLists.txt  Soldado.cpp  Soldado.h
1er_Parcial/1.2Constructores/: CMakeLists.txt  Rectangulo.cpp  Rectangulo.h  main.cpp
1er_Parcial/1.3Sobrecarga_Constructores/: CMakeLists.txt  Tiempo.cpp  Tiempo.h  main.cpp
1er_Parcial/MateDiscretasComprobacionDeVerdad/: CMakeLists.txt  main.cpp
1er_Parcial/Proyecto_1er_Parcial/: BooleanoCell.cpp  BooleanoCell.h  CMakeLists.txt  CharCell.cpp  CharCell.h  DoubleCell.cpp  DoubleCell.h  Entero.cpp  Entero.h
2do_Parcial/1ra_Act_Herencia/: CMakeLists.txt  KameHameHa.cpp  KameHameHa.h  Persona.cpp  Persona.h  SS2.cpp  SS2.h  SSGod.cpp  SSGod.h  SSTres.cpp  SSTres.h  SuperSayayinUno.cpp  SuperSayayinUno.h  ZenkaiBoost.cpp  ZenkaiBoost.h  main.cpp
2do_Parcial/Input_Output/: CMakeLists.txt  README.md  main.cpp
2do_Parcial/Polimofirsmo/: Animal.cpp  Animal.h  CMakeLists.txt  Caballo.cpp  Caballo.h  Canguro.cpp  Canguro.h  Guacamayo.cpp  Guacamayo.h  Jirafa.cpp  Jirafa.h  Leon.cpp  Leon.h  Mono.cpp  Mono.h  Persona.cpp  Persona.h  Tigre.cpp  Tigre.h  main.cpp
