cmake_minimum_required(VERSION 3.27)
project(1ra_Act_Herencia)

set(CMAKE_CXX_STANDARD 17)

add_executable(1ra_Act_Herencia main.cpp
        Persona.h
        Persona.h
        Persona.cpp
        Persona.cpp
        SuperSayayinUno.h
        SuperSayayinUno.cpp
        SSTres.h
        SSTres.cpp
        SSGod.h
        SSGod.cpp
        KameHameHa.h
        KameHameHa.cpp
        ZenkaiBoost.h
        ZenkaiBoost.cpp
        SS2.h
        SS2.cpp)
