cmake_minimum_required(VERSION 3.27)
project(Polimofirsmo)

set(CMAKE_CXX_STANDARD 17)

add_executable(Polimofirsmo main.cpp
        Persona.h
        Persona.cpp
        Jirafa.h
        Jirafa.cpp
        Animal.cpp
        Animal.h
        Caballo.h
        Caballo.cpp
        Mono.h
        Mono.cpp
        Guacamayo.cpp
        Guacamayo.h
        Canguro.h
        Canguro.cpp
        Tigre.h
        Tigre.cpp
        Leon.h
        Leon.cpp)
